Avancée Read me

--- a/5. Rentabilité.ipynb
+++ b/5. Rentabilité.ipynb
@@ -10,14 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import module_projet as md\n",
-    "from geopy.geocoders import Nominatim\n",
-    "\n"
+    "from geopy.geocoders import Nominatim"
    ]
   },
   {
@@ -30,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,24 +46,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adresse=input(\"renseigner votre adresse\")\n",
-    "carburant=input(\"Renseigner le carburant souhaité\")\n",
-    "quanti=input(\"renseigner le nombre de litre souhaité\")\n",
-    "\n",
+    "adresse=input(\"renseigner votre adresse au format : numéro Rue, ville, pays\")\n",
+    "carburant=input(\"Renseigner le carburant souhaité (E10, E85, GPLc, Gazole, SP95, SP98\")\n",
+    "quanti=input(\"renseigner le nombre de litre souhaité\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_renta=md.data_carb(dat_inst, carburant, ['id', 'ville', 'geom','prix_valeur','prix_nom'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "#fonctions a récuperer dans le md\n",
     "\n",
     "def Adresse_to_gps(Adresse) : \n",
@@ -89,31 +94,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On a donc besoin d'une fonction qui calcule le prix du plein en fonction de la station d'essence choisie"
+    "Tout d'abord, on ne va garder que les stations services les plus proches pour ne pas surcharger la complexité. Il parait assez évident qu'une station classée quinzième en distance par exemple, ne sera pas la station la plus rentable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test=df_renta.sample(50) #à remplacer par le df contentenant les plus proches stations\n",
-    "df_opti=df_test.assign(cout=1) #nouvelle colonne avec le cout du plein en tenant compte du trajet et du prix\n",
-    "\n",
-    "\n",
-    "\n",
+    "df_opti=dix_plus_proche(df_renta)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ensuite, a donc besoin d'une fonction qui calcule le prix du plein en fonction de la station d'essence choisie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def prix_plein(Quantité, position, station) : \n",
     "    A = list(map(float,position.split(',')))\n",
     "    B = list(map(float,df_opti.iloc[station,2].split(',')))\n",
     "    \n",
-    "    D= distance1(A,B)/100    #calcul de la distance avec la station \n",
+    "    R,Dist= itinéraire(A,B)   #calcul de la distance avec la station \n",
+    "    D=Dist/1000 #on converti la distance en kilomètre\n",
     "    conso_trajet=D*0.06 #calcul du nb de litre d'essence necessaire pour aller a la station\n",
     "    P=Quantité+conso_trajet #calcul du nb de litre necessaire pour faire le plein après le trajet\n",
     "    prix_L=df_opti.iloc[station,3] #prix au litre à la station\n",
     "    px_plein=prix_L*P #prix du plein de base + prix du trajet\n",
     "    return px_plein\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On ajoute une nouvelle colonne à notre dataframe dans laquelle on implémentera plus tard le prix du plein dans cette station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test=df_renta.sample(1000) #à remplacer par le df contentenant les plus proches stations\n",
+    "df_opti=df_renta.assign(cout=1) #nouvelle colonne avec le cout du plein en tenant compte du trajet et du prix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "pos=Adresse_to_gps(\"1 rue de Rivoli, Paris, France\")\n",
+    "print(prix_plein(50,pos,6796))"
    ]
   },
   {
@@ -132,11 +186,10 @@
    "source": [
     "\n",
     "position=Adresse_to_gps(adresse) #on sort cette ligne de la boucle, sinon le package \"Nomatim\" nous bloque pour usage trop récurrent\n",
-    "for i in range(len(df_opti)) : \n",
+    "for i in df_opti.index : \n",
     "    C=prix_plein(50,position,i) #on calcule le prix du plein pour chaque station\n",
     "    df_opti.iloc[i,5]=C #on ajoute ce prix dans le dataframe\n",
-    "\n",
-    "df_opti = df_opti.sort_values('cout', ascending=True)\n"
+    "\n"
    ]
   },
   {
@@ -162,6 +215,8 @@
     }
    ],
    "source": [
+    "df_opti = df_opti.sort_values('cout', ascending=True) #tri de manière croissante du coût les stations \n",
+    "\n",
     "print(df_opti.head(1)) #station la plus rentable"
    ]
   }
@@ -182,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
