--- a/4. gpd.ipynb
+++ b/4. gpd.ipynb
@@ -133,17 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "import module_projet as md\n",
     "\n",
-    "def x_plus_proche(data, position, carb, nbr_stations):\n",
+    "def x_plus_proche(data, position , carb, nbr_stations):\n",
     "    data_mask = data['Nom Officiel Région']=='Île-de-France'\n",
     "    data_1 = data[data_mask]\n",
     "    data_2 = md.data_carb(data_1, carb, ['adresse', 'ville', 'prix_valeur', 'prix_nom', 'geom'])\n",
-    "    pos = list(map(float,md.Adresse_to_gps(position).split(',')))\n",
+    "    pos = list(map(float,md.Adresse_to_gps2(position).split(',')))\n",
     "    def iti(station):\n",
     "        pos_sta = list(map(float, station.split(',')))\n",
     "        return(itinéraire(pos, pos_sta)[1])\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,30 +162,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'latitude'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/l0/5qk3mw253y945myr_1tfc8z00000gn/T/ipykernel_5024/3133587573.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx_plus_proche\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdat_inst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2.3592784\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m48.8555424\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'gasoil'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/l0/5qk3mw253y945myr_1tfc8z00000gn/T/ipykernel_5024/2092519707.py\u001b[0m in \u001b[0;36mx_plus_proche\u001b[0;34m(data, position, carb, nbr_stations)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdata_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdata_mask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mdata_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_carb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcarb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'adresse'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ville'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'prix_valeur'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'prix_nom'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'geom'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mpos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdresse_to_gps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0miti\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mpos_sta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/Code/projet-python/module_projet.py\u001b[0m in \u001b[0;36mAdresse_to_gps\u001b[0;34m(Adresse)\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mgeolocator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNominatim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_agent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"arman.akgonul@ensae.fr\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mlocation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgeolocator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgeocode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAdresse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatitude\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m','\u001b[0m\u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlongitude\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mGps_to_adresse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'latitude'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x_plus_proche(dat_inst, (2.3592784,48.8555424), 'gasoil', 10)"
+    "data_mask = dat_inst['Nom Officiel Région']=='Île-de-France'\n",
+    "data_1 = dat_inst[data_mask]\n",
+    "data_2 = md.data_carb(data_1, 'Gazole' , ['adresse', 'ville', 'prix_valeur', 'prix_nom', 'geom'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adresse</th>\n",
+       "      <th>ville</th>\n",
+       "      <th>prix_valeur</th>\n",
+       "      <th>prix_nom</th>\n",
+       "      <th>geom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>7 Avenue Pierre Brossolette</td>\n",
+       "      <td>Chilly-Mazarin</td>\n",
+       "      <td>1.778</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.701,2.319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>55 BLD DE PICPUS</td>\n",
+       "      <td>PARIS</td>\n",
+       "      <td>1.818</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.846,2.401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>9 Boulevard du Bel Air</td>\n",
+       "      <td>Franconville</td>\n",
+       "      <td>1.801</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.986,2.238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>AUTOROUTE A6 - AIRE DE VILLABÉ</td>\n",
+       "      <td>VILLABE</td>\n",
+       "      <td>1.814</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.594,2.444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>Autoroute du Soleil - AIRE DE NEMOURS OUEST</td>\n",
+       "      <td>NEMOURS</td>\n",
+       "      <td>1.910</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.261701654868,2.7220366668700997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9855</th>\n",
+       "      <td>Rue de la gare</td>\n",
+       "      <td>MAROLLES-EN-HUREPOIX</td>\n",
+       "      <td>1.799</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.56445,2.29216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9886</th>\n",
+       "      <td>44-50 BD DE VALMY</td>\n",
+       "      <td>COLOMBES</td>\n",
+       "      <td>1.929</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.926,2.253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9912</th>\n",
+       "      <td>29 Avenue du Général Leclerc</td>\n",
+       "      <td>SEVRAN</td>\n",
+       "      <td>1.959</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.939,2.527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9968</th>\n",
+       "      <td>N191, Boulevard Charles de Gaulle</td>\n",
+       "      <td>Mennecy</td>\n",
+       "      <td>1.929</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.566,2.442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9975</th>\n",
+       "      <td>239 Route d'Enghien</td>\n",
+       "      <td>Argenteuil</td>\n",
+       "      <td>1.899</td>\n",
+       "      <td>Gazole</td>\n",
+       "      <td>48.95679,2.2839</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>326 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          adresse                 ville  \\\n",
+       "32                    7 Avenue Pierre Brossolette        Chilly-Mazarin   \n",
+       "33                               55 BLD DE PICPUS                 PARIS   \n",
+       "46                         9 Boulevard du Bel Air          Franconville   \n",
+       "64                 AUTOROUTE A6 - AIRE DE VILLABÉ               VILLABE   \n",
+       "120   Autoroute du Soleil - AIRE DE NEMOURS OUEST               NEMOURS   \n",
+       "...                                           ...                   ...   \n",
+       "9855                               Rue de la gare  MAROLLES-EN-HUREPOIX   \n",
+       "9886                            44-50 BD DE VALMY              COLOMBES   \n",
+       "9912                 29 Avenue du Général Leclerc                SEVRAN   \n",
+       "9968            N191, Boulevard Charles de Gaulle               Mennecy   \n",
+       "9975                          239 Route d'Enghien            Argenteuil   \n",
+       "\n",
+       "      prix_valeur prix_nom                                geom  \n",
+       "32          1.778   Gazole                        48.701,2.319  \n",
+       "33          1.818   Gazole                        48.846,2.401  \n",
+       "46          1.801   Gazole                        48.986,2.238  \n",
+       "64          1.814   Gazole                        48.594,2.444  \n",
+       "120         1.910   Gazole  48.261701654868,2.7220366668700997  \n",
+       "...           ...      ...                                 ...  \n",
+       "9855        1.799   Gazole                    48.56445,2.29216  \n",
+       "9886        1.929   Gazole                        48.926,2.253  \n",
+       "9912        1.959   Gazole                        48.939,2.527  \n",
+       "9968        1.929   Gazole                        48.566,2.442  \n",
+       "9975        1.899   Gazole                     48.95679,2.2839  \n",
+       "\n",
+       "[326 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'module_projet' has no attribute 'Adresse_to_gps2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/l0/5qk3mw253y945myr_1tfc8z00000gn/T/ipykernel_5024/3836344835.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx_plus_proche\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdat_inst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"1 rue d'Arsonval, Orsay, France\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Gazole'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/l0/5qk3mw253y945myr_1tfc8z00000gn/T/ipykernel_5024/2769445450.py\u001b[0m in \u001b[0;36mx_plus_proche\u001b[0;34m(data, position, carb, nbr_stations)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdata_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdata_mask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mdata_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_carb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcarb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'adresse'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ville'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'prix_valeur'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'prix_nom'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'geom'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mpos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdresse_to_gps2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mposition\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0miti\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mpos_sta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'module_projet' has no attribute 'Adresse_to_gps2'"
+     ]
+    }
+   ],
+   "source": [
+    "x_plus_proche(dat_inst, \"1 rue d'Arsonval, Orsay, France\", 'Gazole', 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +370,7 @@
        "'48.7087952,2.1742033'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
